[package]
name = "port-tray"
version = "1.0.3"
description = "A high-performance desktop app to visualize and kill system ports"
authors = ["Port Tray Contributors"]
license = "MIT"
repository = "https://github.com/try-samuel/port-tray"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
